--- a/default.css
+++ b/default.css
@@ -16,19 +16,68 @@ html, body{
 
 h1, h2, h3, h4, h5, h6, h7, strong {
     color: var(--mainText);
-
+    /*font-family: 'Russo One', sans-serif;*/
+    font-family: 'Russo One', sans-serif;
+    font-weight: 500;
 }
 
 p, li, span, label, input, textarea{
     color: var(--secondaryText);
+    font-family: 'Roboto Serif', serif;
 
 }
+a {
+    text-decoration: none;
+    color: #17a2b8;
+}
+
+ul{
+    list-style: none;
+}
+
+h1 { font-size: 56px;}
+h2 { font-size: 34px;}
+h3 { font-size: 28px;}
+h4 { font-size: 24px;}
+h5 { font-size: 20px;}
+h6 { font-size: 16px;}
+
 
 .s1{
     background: var(--mainColor);
-    border-bottom: 2px solid var(--borderColor);
+    border-bottom: 1.5px solid var(--borderColor);
+    overflow: auto;
 }
 .s2{
     background: var(--secondaryColor);
-    border-bottom:2px solid var(--borderColor);
+    border-bottom:1.5px solid var(--borderColor);
+    overflow:auto;
+}
+
+.main-container{
+    width: 1200px;
+    margin: 0 auto;
+}
+
+.greeting-wrapper{
+    display:grid;
+    border:2px dashed lightcoral;
+    min-height: 10em;
+    text-align: center;
+    align-content: center;
+}
+
+.intro-wrapper{
+    background-color: var(--secondaryColor);
+    border: 1px solid var(--borderColor);
+
+    -webkit-box-shadow: 3px 5px 17px 2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 3px 5px 17px 2px rgba(0,0,0,0.75);
+    box-shadow: 3px 5px 17px 2px rgba(0,0,0,0.75);
+}
+
+@media screen and (max-width: 1200px){
+    .main-container{
+        width: 95%;
+    }
 }
