--- a/default.css
+++ b/default.css
@@ -61,7 +61,6 @@ h6 { font-size: 16px;}
 
 .greeting-wrapper{
     display:grid;
-    border:2px dashed lightcoral;
     min-height: 10em;
     text-align: center;
     align-content: center;
@@ -70,10 +69,82 @@ h6 { font-size: 16px;}
 .intro-wrapper{
     background-color: var(--secondaryColor);
     border: 1px solid var(--borderColor);
+    border-radius: 5px 5px 0 0;
 
-    -webkit-box-shadow: 3px 5px 17px 2px rgba(0,0,0,0.75);
-    -moz-box-shadow: 3px 5px 17px 2px rgba(0,0,0,0.75);
-    box-shadow: 3px 5px 17px 2px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 2px 2px 10px 2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 2px 2px 10px 2px rgba(0,0,0,0.75);
+    box-shadow: 2px 2px 10px 2px rgba(0,0,0,0.75);
+
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 3em 30em;
+    grid-template-areas:
+    'nav-wrapper nav-wrapper'
+    'left-column right-column'
+    ;
+}
+
+.nav-wrapper{
+    grid-area: nav-wrapper;
+    border-radius: 5px 5px 0 0;
+    border-bottom: 1.5px solid var(--borderColor);
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--mainColor);
+
+}
+
+#navigation{
+    margin:0;
+    padding: 10px;
+}
+
+#navigation li {
+    display: inline-block;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.dots-wrapper{
+    display:flex;
+    padding: 10px;
+
+}
+
+#dot-1{
+    background-color: rgb(245, 61, 61);
+}
+
+#dot-2{
+    background-color: rgb(233, 236, 47);
+}
+
+#dot-3{
+    background-color: rgb(31, 138, 31);
+}
+
+.browser-dot{
+    background-color: black;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    margin: 7px;
+
+    -webkit-box-shadow: -1px -1px 2px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: -1px -1px 2px 0px rgba(0,0,0,0.75);
+    box-shadow: -1px -1px 2px 0px rgba(0,0,0,0.75);
+}
+
+.left-column{
+    grid-area: left-column;
+
+
+}
+
+.right-column{
+    grid-area: right-column;
+
 }
 
 @media screen and (max-width: 1200px){
