--- a/default.css
+++ b/default.css
@@ -7,7 +7,8 @@
     --secondaryText:#4b5156;
 
     --themeDotBorder:#24292e;
-
+    --previewBg:rgb(251, 249, 243, 0.8);
+    --previewShadow: #f0ead6;
 
 }
 
@@ -208,11 +209,190 @@ h6 { font-size: 16px;}
 
 .right-column{
     grid-area: right-column;
+    display: grid;
+    align-content: center;
+
+    padding-top:50px;
+    padding-bottom: 50px;
+}
+
+#preview-shadow{
+    background-color: var(--previewShadow);
+    width: 300px;
+    height: 175px;
+    padding-left: 30px;
+    padding-top: 30px;
+}
+
+#preview{
+    width: 300px;
+    border: 1.5px solid #17a2b8;
+    background-color: var(--previewBg);
+    padding:15px;
+    position: relative;
 
 }
+
+.corner{
+    border-radius: 50%;
+    border: 1.5px solid #17a2b8;
+    height: 7px;
+    width: 7px;
+    background-color: #fff;
+    position:absolute;
+}
+
+#corner-tl{
+    top: -5px;
+    left:-5px;
+}
+
+#corner-tr{
+    top: -5px;
+    right:-5px;
+}
+
+#corner-bl{
+    bottom: -5px;
+    left:-5px;
+}
+
+#corner-br{
+    bottom: -5px;
+    right:-5px;
+}
+
+.about-wrapper{
+    display: grid;
+    padding-bottom: 40px;
+    padding-top: 40px;
+    
+}
+
+#skills{
+    display: flex;
+    justify-content: space-evenly;
+    background-color: var(--previewShadow);
+}
+
+.post-wrapper{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 320px);
+    gap: 30px;
+    justify-content:center;
+    padding-bottom: 50px;
+}
+
+.post{
+    border:1.5px solid var(--borderColor);
+    -webkit-box-shadow: 2px 2px 10px 2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 2px 2px 10px 2px rgba(0,0,0,0.75);
+    box-shadow: 2px 2px 10px 2px rgba(0,0,0,0.75);
+
+}
+
+.thumbnail{
+    width: 100%;
+    height:200px;
+    display:block;
+
+    object-fit: cover;
+
+}
+
+.post-preview{
+    background-color: white;
+    padding: 15px;
+}
+
+.post-title{
+    color:black;
+    margin: 0px;
+}
+
+.post-intro{
+    color: #4b5156;
+    font-size: 16px;
+}
+
+p.post-intro {
+    font-size: 13px;
+}
+
 
 @media screen and (max-width: 1200px){
     .main-container{
         width: 95%;
     }
 }
+
+@media screen and (max-width: 800px){
+    .intro-wrapper{
+        grid-template-columns: 1fr;
+        grid-template-areas:
+        'nav-wrapper'
+        'left-column'
+        'right-column'
+        ;
+    }
+
+    .right-column{
+        justify-content: center;
+    }
+    
+}
+
+@media screen and (max-width: 450px){
+    #preview{
+        width: 250px;
+        padding-right: 4px;
+    }
+    #preview-shadow{
+        width: 250px;
+    }
+    .right-column{
+        padding-bottom: 70px;
+    }
+
+    #skills{
+        display: grid;
+    }
+}
+
+.footer{
+    background-color: #fff;
+    padding:10px;
+}
+
+.footer__text{
+    font-size:1rem;
+    color:gray;
+    text-align: center;
+}
+
+.footer__text a{
+    font-size:1.3rem;
+    color:gray;
+    transition:all 0.2s ease-in-out;
+    display:inline-block;
+}
+.footer__text h7:hover,.footer__text h7:active{
+    color:#36d1dc
+}
+.footer hr{
+    margin:1rem auto;
+    border:0;
+    width:50%;
+    border-top:2px solid rgba(255,255,255,0.1);
+}
+.social-links{
+    display:flex;
+    justify-content: center;
+}
+.social-links a{font-size:3rem;display:flex;flex-direction:column;justify-content:center;color:black;width:5rem;height:1rem;margin:1.6rem 1.6rem;transition:all ease 0.2s}
+.social-links a i{transition:all ease-in-out 0.2s}
+.social-links a:hover{transform:scale(1.1) translateY(-2px)}
+.social-links a:hover .fa-twitter{color:#00acee}
+.social-links a:hover .fa-envelope{color:#EA4335}
+.social-links a:hover .fa-linkedin{color:#4875b4}
+
