--- a/default.css
+++ b/default.css
@@ -218,14 +218,15 @@ h6 { font-size: 16px;}
 
 #preview-shadow{
     background-color: var(--previewShadow);
-    width: 300px;
+    width: 350px;
     height: 175px;
     padding-left: 30px;
     padding-top: 30px;
+    padding-bottom: 40px;
 }
 
 #preview{
-    width: 300px;
+    width: 350px;
     border: 1.5px solid #17a2b8;
     background-color: var(--previewBg);
     padding:15px;
@@ -266,7 +267,9 @@ h6 { font-size: 16px;}
     display: grid;
     padding-bottom: 40px;
     padding-top: 40px;
-    
+    padding-right:20px;
+    padding-left: 20px;
+    text-align: justify;
 }
 
 #skills{
